Fix word break in payment agent contant details

--- a/packages/cashier/src/pages/payment-agent/payment-agent-details/payment-agent-details.scss
+++ b/packages/cashier/src/pages/payment-agent/payment-agent-details/payment-agent-details.scss
@@ -27,6 +27,7 @@
             @include mobile {
                 overflow: hidden;
                 text-overflow: ellipsis;
+                word-break: break-all;
 
                 &:not(:first-child) {
                     color: var(--brand-red-coral);
